--- a/main.html
+++ b/main.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Canvas Line</title>
+    <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
-    <canvas id="myCanvas" width="500" height="500" style="border:1px solid #000;"></canvas>
+    <span class="formas">
+        <div class="icon" id="lineaBtn">
+            <div class="form-box">
+                <div class="linea"></div>   
+            </div>
+            <a href="">linea</a>
+        </div>
+        <div class="icon" id="sqrBtn">
+            <div class="form-box">
+                <div class="cuadrado"></div>   
+            </div>
+            <a href="">sqr</a>
+        </div>
+        <div class="icon" id="rectBtn">
+            <div class="form-box">
+                <div class="rectangle"></div>   
+            </div>
+            <a href="">rect</a>
+        </div>
+    </span>
+    <div class="container" itemprop="Paint"  >
+        <canvas id="myCanvas" width="500" height="500" style="border:1px solid #000;" class="ctx"></canvas>
+    </div>
     <script src="app.js"></script>
+
 </body>
 </html>
