--- a/main.html
+++ b/main.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Canvas Line</title>
+    <title>Paint</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="https://cdn.discordapp.com/attachments/747285850609549424/1201416280842981376/PC_Computer_-_Needy_Streamer_Overload_-_Superchat_Pop-Ups.png?ex=65c9bd1a&is=65b7481a&hm=34a911da6199d20bcead260b4d87fc75ae8615ecf5aec3d0f5d9ac46ce82dfe4&" />
     
 </head>
 <body>
@@ -13,7 +14,7 @@
             <div class="form-box">
                 <div class="linea"></div>   
             </div>
-            <a href="">linea</a>
+            <a href="">line</a>
         </div>
         <div class="icon" id="sqrBtn">
             <div class="form-box">
@@ -26,6 +27,12 @@
                 <div class="rectangle"></div>   
             </div>
             <a href="">rect</a>
+        </div>
+        <div class="icon" id="circleBtn">
+            <div class="form-box">
+                <div class="circle"></div>   
+            </div>
+            <a href="">circle</a>
         </div>
     </span>
     <div class="container" itemprop="Paint"  >
