--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
             </div>
             <a onclick="event.preventDefault();">circle</a>
         </div>
+        <div class="icon" id="ovalBtn">
+            <div class="form-box">
+                <div class="oval"></div>   
+            </div>
+            <a onclick="event.preventDefault();">oval</a>
+        </div>
         <div class="icon" id="polybtn">
             <div class="form-box">
                 <div class="cuadrado">n</div>   
