--- a/index.html
+++ b/index.html
@@ -64,6 +64,20 @@
                 <label for="">sides</label>
                 <input type="number" id="sides" value="1" min="1" max="100">
             </div>
+            <div style="padding: 5px; display: grid; grid-template-columns: 33% 33% 33%">
+                <div class="miniicon" >
+                    <label for="">undo</label> <br>
+                    <img  class="picbtn" id="un_Btn" src="https://cdn.discordapp.com/attachments/747285850609549424/1210457899218771968/arrow_back.png?ex=65eaa1c4&is=65d82cc4&hm=9d16ab7dca307200e30f7600f170aac1a94c76762d0fd4cd6e5ae5003eb33655&" alt="">
+                </div>
+                <div class="miniicon" >
+                    <label for="">clear</label> <br>
+                    <img style="width: 23px;" id="clr_Btn" class="picbtn" src="https://cdn.discordapp.com/attachments/747285850609549424/1210462407692910612/199849.png?ex=65eaa5f7&is=65d830f7&hm=278c25453d151d5b0ab9250e016f4cec17383ccf31ebcdf2d4c773fd0b45d4b8&" alt="">
+                </div>
+                <div class="miniicon">
+                    <label for="">redo</label> <br>
+                    <img  class="picbtn" id="re_Btn"  src="https://cdn.discordapp.com/attachments/747285850609549424/1210457899503976468/arrow_forward.png?ex=65eaa1c4&is=65d82cc4&hm=fc168c8c4cb2a50017acb984f5dae11b884fde2ce5e9707859c2901dbe27a051&" alt="">
+                </div>
+            </div>
         </div>
     </span>
     <script src="app.js"></script>
