figuras migradas a otro archivo para que se entienda mejor el codigo

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </div>
         </div>
     </span>
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
 
 </body>
 </html>
