--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
             </div>
             <a onclick="event.preventDefault();">Polygon</a>
         </div>
+        <div class="icon" id="moveBtn">
+            <div class="form-box">
+                <div class="oval"></div>   
+            </div>
+            <a onclick="event.preventDefault();">move</a>
+        </div>
+        
     </span>
     <div class="container" itemprop="Paint"  >
         <canvas id="myCanvas" width="700" height="500" style="border:1px solid #000;" class="ctx"></canvas>
