--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
             </div>
             <a onclick="event.preventDefault();">move</a>
         </div>
+        <div class="icon" id="resizeBtn">
+            <div class="form-box">
+                <div class="oval"></div>   
+            </div>
+            <a onclick="event.preventDefault();">resize</a>
+        </div>
         
     </span>
     <div class="container" itemprop="Paint"  >
