--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
         </div>
         <div class="icon" id="moveBtn">
             <div class="form-box">
-                <div class="oval"></div>   
+                <img class="move" src="https://cdn.discordapp.com/attachments/747285850609549424/1215461638677991537/nso_move.png?ex=65fcd5dc&is=65ea60dc&hm=4b2d02c0f11d22b471ec8fda57f4fdf37d240065133b59383d15f6a83ecd212d&"></img>   
             </div>
             <a onclick="event.preventDefault();">move</a>
         </div>
         <div class="icon" id="resizeBtn">
             <div class="form-box">
-                <div class="oval"></div>   
+                <img class="resize" src="https://cdn.discordapp.com/attachments/747285850609549424/1215461638422007808/nso_nesw.png?ex=65fcd5dc&is=65ea60dc&hm=d02b3b35aecbe200f39d187139f9432e8bd31bae890136343460d2ac4bd339f4&"></img>   
             </div>
             <a onclick="event.preventDefault();">resize</a>
         </div>
