--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
             </div>
             <a onclick="event.preventDefault();">resize</a>
         </div>
+        <div class="icon" id="roteBtn">
+            <div class="form-box">
+                <img class="resize" src="https://cdn.discordapp.com/attachments/747285850609549424/1215461638422007808/nso_nesw.png?ex=65fcd5dc&is=65ea60dc&hm=d02b3b35aecbe200f39d187139f9432e8bd31bae890136343460d2ac4bd339f4&"></img>   
+            </div>
+            <a onclick="event.preventDefault();">rotate</a>
+        </div>
         
     </span>
     <div class="container" itemprop="Paint"  >
