--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
             </div>
             <a onclick="event.preventDefault();">rect</a>
         </div>
+        <div class="icon" id="romboBtn">
+            <div class="form-box">
+                <div class="rectangle"></div>   
+            </div>
+            <a onclick="event.preventDefault();">rombo</a>
+        </div>
         <div class="icon" id="circleBtn">
             <div class="form-box">
                 <div class="circle"></div>   
