--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
             </div>
             <a onclick="event.preventDefault();">line</a>
         </div>
+        <div class="icon" id="textBtn">
+            <div class="form-box">
+                <div class="linea"></div>   
+            </div>
+            <a onclick="event.preventDefault();">text</a>
+        </div>
         <div class="icon" id="sqrBtn">
             <div class="form-box">
                 <div class="cuadrado"></div>   
@@ -103,6 +109,7 @@
                     <img  class="picbtn" id="re_Btn"  src="https://cdn.discordapp.com/attachments/747285850609549424/1210457899503976468/arrow_forward.png?ex=65eaa1c4&is=65d82cc4&hm=fc168c8c4cb2a50017acb984f5dae11b884fde2ce5e9707859c2901dbe27a051&" alt="">
                 </div>
             </div>
+           
         </div>
     </span>
     <script type="module" src="app.js"></script>
