reowork de los assets

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
         </div>
         <div class="icon" id="romboBtn">
             <div class="form-box">
-                <div class="rectangle"></div>   
+                <div class="rombo"></div>   
             </div>
             <a onclick="event.preventDefault();">rombo</a>
         </div>
         <div class="icon" id="trapbtn">
-            <div class="form-box">
-                <div class="rectangle"></div>   
+            <div class="form-box ">
+                <div class="trapecio"></div>   
             </div>
             <a onclick="event.preventDefault();">trapecio</a>
         </div>
@@ -67,25 +67,25 @@
         </div>
         <div class="icon" id="moveBtn">
             <div class="form-box">
-                <img class="move" src="https://cdn.discordapp.com/attachments/747285850609549424/1215461638677991537/nso_move.png?ex=65fcd5dc&is=65ea60dc&hm=4b2d02c0f11d22b471ec8fda57f4fdf37d240065133b59383d15f6a83ecd212d&"></img>   
+                <img class="move" src="./assets/nso_move.cur"></img>   
             </div>
             <a onclick="event.preventDefault();">move</a>
         </div>
         <div class="icon" id="resizeBtn">
             <div class="form-box">
-                <img class="resize" src="https://cdn.discordapp.com/attachments/747285850609549424/1215461638422007808/nso_nesw.png?ex=65fcd5dc&is=65ea60dc&hm=d02b3b35aecbe200f39d187139f9432e8bd31bae890136343460d2ac4bd339f4&"></img>   
+                <img class="resize" src="./assets/nso_nesw.cur"></img>   
             </div>
             <a onclick="event.preventDefault();">resize</a>
         </div>
         <div class="icon" id="roteBtn">
             <div class="form-box">
-                <img class="resize" src="https://cdn.discordapp.com/attachments/747285850609549424/1215461638422007808/nso_nesw.png?ex=65fcd5dc&is=65ea60dc&hm=d02b3b35aecbe200f39d187139f9432e8bd31bae890136343460d2ac4bd339f4&"></img>   
+                <img class="resize" src="./assets/nso_alt.cur"></img>   
             </div>
             <a onclick="event.preventDefault();">rotate</a>
         </div>
         <div class="icon" id="deletebtn">
             <div class="form-box">
-                <img class="resize" src="https://cdn.discordapp.com/attachments/747285850609549424/1215461638422007808/nso_nesw.png?ex=65fcd5dc&is=65ea60dc&hm=d02b3b35aecbe200f39d187139f9432e8bd31bae890136343460d2ac4bd339f4&"></img>   
+                <img class="resize" src="./assets/nso_unavaliable.cur"></img>   
             </div>
             <a onclick="event.preventDefault();">delete</a>
         </div>
@@ -110,35 +110,35 @@
             <div style="padding: 5px; display: grid; grid-template-columns: 33% 33% 33%">
                 <div class="miniicon" >
                     <label for="">undo</label> <br>
-                    <img  class="picbtn" id="un_Btn" src="https://cdn.discordapp.com/attachments/747285850609549424/1210457899218771968/arrow_back.png?ex=65eaa1c4&is=65d82cc4&hm=9d16ab7dca307200e30f7600f170aac1a94c76762d0fd4cd6e5ae5003eb33655&" alt="">
+                    <img  class="picbtn" id="un_Btn" src="./assets/arrow_back.png" alt="">
                 </div>
                 <div class="miniicon" >
                     <label for="">clear</label> <br>
-                    <img style="width: 23px;" id="clr_Btn" class="picbtn" src="https://cdn.discordapp.com/attachments/747285850609549424/1210462407692910612/199849.png?ex=65eaa5f7&is=65d830f7&hm=278c25453d151d5b0ab9250e016f4cec17383ccf31ebcdf2d4c773fd0b45d4b8&" alt="">
+                    <img style="width: 23px;" id="clr_Btn" class="picbtn" src="./assets/199849.png" alt="">
                 </div>
                 <div class="miniicon">
                     <label for="">redo</label> <br>
-                    <img  class="picbtn" id="re_Btn"  src="https://cdn.discordapp.com/attachments/747285850609549424/1210457899503976468/arrow_forward.png?ex=65eaa1c4&is=65d82cc4&hm=fc168c8c4cb2a50017acb984f5dae11b884fde2ce5e9707859c2901dbe27a051&" alt="">
+                    <img  class="picbtn" id="re_Btn"  src="./assets/arrow_forward.png" alt="">
                 </div>
             </div>
             <div style="padding: 5px; display: grid; grid-template-columns: 25% 25% 25% 25%; margin: 130% auto;">
                 <div class="miniicon" id="importBtn">
                     <label for="">imp</label> <br>
-                    <img  class="picbtn"  src="https://cdn.discordapp.com/attachments/747285850609549424/1210457899503976468/arrow_forward.png?ex=65eaa1c4&is=65d82cc4&hm=fc168c8c4cb2a50017acb984f5dae11b884fde2ce5e9707859c2901dbe27a051&" alt="">
+                    <img  class="picbtn"  src="./assets/loadfile.png" alt="">
                 </div>
                 
                 <div class="miniicon" id="exportBtn"  >
                     <label for="">exp</label> <br>
-                    <img  class="picbtn" src="https://cdn.discordapp.com/attachments/747285850609549424/1210457899218771968/arrow_back.png?ex=65eaa1c4&is=65d82cc4&hm=9d16ab7dca307200e30f7600f170aac1a94c76762d0fd4cd6e5ae5003eb33655&" alt="">
+                    <img  class="picbtn" src="./assets/savefile.png" alt="">
                 </div>
 
                 <div class="miniicon" id="saveBtn">
                     <label for="">png</label> <br>
-                    <img style="width: 23px;"  class="picbtn" src="https://cdn.discordapp.com/attachments/747285850609549424/1210462407692910612/199849.png?ex=65eaa5f7&is=65d830f7&hm=278c25453d151d5b0ab9250e016f4cec17383ccf31ebcdf2d4c773fd0b45d4b8&" alt="">
+                    <img style="width: 23px;"  class="picbtn" src="./assets/savepngblack.png" alt="">
                 </div>
                 <div class="miniicon" id="convert_to_pdf" >
                     <label for="">pdf</label> <br>
-                    <img style="width: 23px;"  class="picbtn" src="https://cdn.discordapp.com/attachments/747285850609549424/1210462407692910612/199849.png?ex=65eaa5f7&is=65d830f7&hm=278c25453d151d5b0ab9250e016f4cec17383ccf31ebcdf2d4c773fd0b45d4b8&" alt="">
+                    <img style="width: 23px;"  class="picbtn" src="./assets/199849.png" alt="">
                 </div>
             </div>
 
