--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Paint</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js"></script>
-    <link rel="shortcut icon" href="https://cdn.discordapp.com/attachments/747285850609549424/1201416280842981376/PC_Computer_-_Needy_Streamer_Overload_-_Superchat_Pop-Ups.png?ex=65c9bd1a&is=65b7481a&hm=34a911da6199d20bcead260b4d87fc75ae8615ecf5aec3d0f5d9ac46ce82dfe4&" />
+    <link rel="shortcut icon" href="./assets/tabicon.png" />
     
 </head>
 <body>
