--- a/index.html
+++ b/index.html
@@ -89,6 +89,30 @@
             </div>
             <a onclick="event.preventDefault();">delete</a>
         </div>
+        <div class="icon" id="sendbottom_btn">
+            <div class="form-box">
+                <img class="resize" src="./assets/nso_unavaliable.cur"></img>   
+            </div>
+            <a onclick="event.preventDefault();">send bottom</a>
+        </div>
+        <div class="icon" id="sendback_btn">
+            <div class="form-box">
+                <img class="resize" src="./assets/nso_unavaliable.cur"></img>   
+            </div>
+            <a onclick="event.preventDefault();">send front</a>
+        </div>
+        <div class="icon" id="sendfront_btn">
+            <div class="form-box">
+                <img class="resize" src="./assets/nso_unavaliable.cur"></img>   
+            </div>
+            <a onclick="event.preventDefault();">send back</a>
+        </div>
+        <div class="icon" id="sendup_btn">
+            <div class="form-box">
+                <img class="resize" src="./assets/nso_unavaliable.cur"></img>   
+            </div>
+            <a onclick="event.preventDefault();">send up</a>
+        </div>
     </span>
     <div class="container" itemprop="Paint"  >
         <canvas id="myCanvas" width="700" height="500" style="border:1px solid #000;" class="ctx"></canvas>
