--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
 </head>
 <body>
-    <span class="formas">
+    <span class="formas" style="max-height: 600px;">
         <div class="icon" id="lineaBtn">
             <div class="form-box">
                 <div class="linea"></div>   
@@ -91,25 +91,25 @@
         </div>
         <div class="icon" id="sendbottom_btn">
             <div class="form-box">
-                <img class="resize" src="./assets/nso_unavaliable.cur"></img>   
+                <img class="resize" src="./assets/send_bottom.png"></img>   
             </div>
             <a onclick="event.preventDefault();">send bottom</a>
         </div>
         <div class="icon" id="sendback_btn">
             <div class="form-box">
-                <img class="resize" src="./assets/nso_unavaliable.cur"></img>   
-            </div>
-            <a onclick="event.preventDefault();">send front</a>
-        </div>
-        <div class="icon" id="sendfront_btn">
-            <div class="form-box">
-                <img class="resize" src="./assets/nso_unavaliable.cur"></img>   
+                <img class="resize" src="./assets/send_back.png"></img>   
             </div>
             <a onclick="event.preventDefault();">send back</a>
         </div>
+        <div class="icon" id="sendfront_btn">
+            <div class="form-box">
+                <img class="resize" src="./assets/send_front.png"></img>   
+            </div>
+            <a onclick="event.preventDefault();">send front</a>
+        </div>
         <div class="icon" id="sendup_btn">
             <div class="form-box">
-                <img class="resize" src="./assets/nso_unavaliable.cur"></img>   
+                <img class="resize" src="./assets/send_up.png"></img>   
             </div>
             <a onclick="event.preventDefault();">send up</a>
         </div>
